// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard test should render correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Костюм гуся
      </h2>
      <div
        class="product-card__description"
      >
        Запускаем гуся, работяги
      </div>
      <h1
        class="product-card__price"
      />
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
    <img
      alt="Костюм гуся"
      class="product-card__image"
      src="/lamp.png"
    />
  </div>
</DocumentFragment>
`;

exports[`ProductCard test should render correctly 2`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Костюм гуся
      </h2>
      <div
        class="product-card__description"
      >
        Запускаем гуся, работяги
      </div>
      <h1
        class="product-card__price"
      />
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
  </div>
</DocumentFragment>
`;
